media/css/mozorg/home/home.scss
/* ... */
#icon-sprite {
    display: none;
}


// ** FIREFOX ** //
#firefox {
    background: #2d253a;
    color: #fff;
    text-align: center;

    h2 {
        @include font-size(24px);
        padding-top: 40px;

        &:before {
            @include at2x('/media/img/firefox/template/logo-large.png');
            @include background-size(100%);
            background-repeat: no-repeat;
            content: '';
            display: block;
            height: 84px;
            margin: 0 auto 10px;
            width: 80px;
        }

        @media #{$mq-phone-wide} {
            @include font-size(36px);

            &:before {
                height: 142px;
                width: 136px;
            }
        }

        @media #{$mq-high-res} {
            &:before {
                @include background-size(100%);
            }
        }
    }

    .horizon {
        @include horizon-gradient;

        .content {
            padding-bottom: 270px;
        }
    }

    .stars {
        background: url('/media/img/firefox/horizon/stars.svg') center 60px no-repeat;
    }

    .content {
        p {
            margin-bottom: 40px;
        }

        a,
        a:hover {
            color: #fff;
        }

        @media #{$mq-tablet} {
            @include font-size(24px);
        }
    }

    .forest-container {
        height: 416px;
        margin-top: -254px;
        position: relative;
    }

    .mountains-container {
        height: 483px;
        left: 50%;
        // offset assets to get the fox in the viewport
        margin-left: -1046px;
        position: absolute;
        top: 0;
        width: 1770px;

        .layer {
            left: 0;
            position: absolute;
            width: 1770px;
        }

        @media #{$mq-tablet} {
            // re-center assets
            margin-left: -885px;
        }
    }

    .sun {
        height: 318px;
        left: 50%;
        margin-left: -161px;
        position: absolute;
        top: 30px;
        width: 322px;
    }

    .mountains {
        height: 482px;
        top: 0;
    }

    .foreground-shape {
        @include at2x('/media/img/firefox/horizon/foreground.png', 1770px, 254px);
        background-position: top left;
        background-repeat: no-repeat;
        bottom: 0;
        height: 254px;
    }

    .trees-left {
        bottom: 70px;
        height: 602px;
        left: -375px;
        position: absolute;
        width: 909px;
    }

    .trees-right {
        bottom: 120px;
        height: 550px;
        position: absolute;
        right: -420px;
        width: 922px;
    }

    .fox {
        bottom: 39px;
        height: 254px;
        position: absolute;
        right: 140px;
        width: 522px;
    }

    #fxmobile-download-buttons {
        // hide by default - show with JS based on platform
        display: none;

        li {
            margin-bottom: 12px;
        }

        &.visible {
            display: block;
        }
    }
}

// Externals (Add-ons, careers, support)
.section-externals {
    background: #f5f5f5;
    text-align: center;

    ul {
        position: relative;
        padding: 60px 0 40px;
        @include clearfix;

        li {
            max-width: $width-phone-wide;
            margin: 0 auto 30px;

            @media #{$mq-tablet} {
                float: left;
                width: 33.3%;
                margin: 0;
            }
        }
    }

    h3 {
        @include font-size(18px);
        color: $color-text-secondary;
        padding-top: 100px;
        position: relative;

        &:before {
            @include background-size(fill);
            background-position: center center;
            background-repeat: no-repeat;
            content: '';
            height: 84px;
            left: 0;
            position: absolute;
            top: 0;
            width: 100%;
        }

        @media #{$mq-tablet} {
            @include font-size(20px);
        }
    }

    a {
        display: block;
        padding: 0 20px;
        text-align: center;
        text-decoration: none;

        &.add-ons h3:before {
            background-image: url('/media/img/home/2016/icon-addons.svg');
        }
        &.careers h3:before {
            background-image: url('/media/img/home/2016/icon-careers.svg');
        }
        &.help h3:before {
            background-image: url('/media/img/home/2016/icon-help.svg');
        }

        &:hover,
        &:active,
        &:focus {
            text-decoration: none;

            h3 {
                text-decoration: underline;
            }
        }
    }

    p {
        @include font-size(16px);
        color: $color-text-secondary;
    }
}


// Newsletter
#newsletter-subscribe.section-newsletter {
    margin: 0;
    background: $color-mozred-bright;

    .newsletter-form,
    .form-title,
    .form-contents {
        @include clearfix;
        float: none;
        margin: 0 auto;
    }

    .form-title {
        @include background-size(100px, 100px);
        background-position: center top;
        margin-top: 0;
        min-height: 0;
        padding-left: 0;
        padding-top: 120px;
        text-align: center;

        h3 {
            @include font-size(32px);
            font-style: italic;
            text-align: center;
        }

        h4 {
            @include font-size(18px);
            font-weight: normal;
            line-height: 1.5;
        }
    }

    .form-contents {
        .field {
            margin: 0 0 1em;
        }
    }

    .errorlist {
        padding: 10px;
    }

    #newsletter-form-thankyou {
        padding: 0;
    }
}

.js #form-details {
    @include hidden;
}
/* ... */

